src/test/success/function_empty_return.egern
func emptyReturn(b: int): void {
    var a = 4;
    print(a + b);
    return;
}
emptyReturn(5);
