src/test/fail/assigning_function_to_variable_fail.egern
func hello(): void {
    return
}

var a = hello
print(a)
